--- a/src/cr/ac/una/ingenieria/appMVC/Vista/Reportes/CantidadesMinimas.jrxml
+++ b/src/cr/ac/una/ingenieria/appMVC/Vista/Reportes/CantidadesMinimas.jrxml
@@ -40,7 +40,7 @@ FROM
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new java.util.Date().toString()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[(new java.text.SimpleDateFormat("EEEEE dd MMMMM yyyy hh:mm aaa",new Locale("es", "ES"))).format(new Date())]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="244" y="12" width="115" height="26"/>
