--- a/src/cr/ac/una/ingenieria/appMVC/Vista/Reportes/Proveedores.jrxml
+++ b/src/cr/ac/una/ingenieria/appMVC/Vista/Reportes/Proveedores.jrxml
@@ -45,7 +45,7 @@ FROM
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new java.util.Date().toString()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[(new java.text.SimpleDateFormat("EEEEE dd MMMMM yyyy hh:mm aaa",new Locale("es", "ES"))).format(new Date())]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement mode="Opaque" x="3" y="68" width="130" height="41"/>
